Subo ampliacion de tamaño para el textbox de Descripcion.

--- a/1 Desarrollo/styles/style.css
+++ b/1 Desarrollo/styles/style.css
@@ -336,3 +336,8 @@ margin-right: 10px;
 #timeline-popup .popBody {
     text-align:justify;
 }
+
+#cargarEventos .pop-descripcion {
+	width: 350px;
+	height: 200px;
+}
