--- a/1 Desarrollo/styles/style.css
+++ b/1 Desarrollo/styles/style.css
@@ -9,6 +9,8 @@
 body {
 	background: url(../images/background.jpg) repeat;
 	font-family: "Lindsey";
+	max-width:100%;
+	max-height:100%;
 	margin: 0;
 	padding: 0;
 }
