Subo prueba de eventos con la nueva codificacion de paises ALPHA 2 y arreglo div de pines.jpg a 30 y 25 px

--- a/dev/styles/style.css
+++ b/dev/styles/style.css
@@ -38,8 +38,8 @@ body {
 
 #timeline-lineas .timeline-eventos .evento {
 	background: url(../images/pines.png) no-repeat;
-	width: 100%;
-	min-height: 100%;
+	width: 30px;
+	height: 25px;
 	position: absolute;
 	cursor: pointer;
 	margin: 6;
