Subo cambio de calculos en la posicion vertical de los eventos. Subo cambio de calculos con respecto al mes y dia de la regla. Agrego padding al evento.

--- a/dev/styles/style.css
+++ b/dev/styles/style.css
@@ -42,8 +42,8 @@ body {
 	height: 25px;
 	position: absolute;
 	cursor: pointer;
-	margin: 6;
-	padding: 0;
+	margin: 6;	
+	padding-bottom: 240;
 }
 
 #timeline-lineas .categoria-musica { background-position: -152px 0 !important; }
