--- a/dev/styles/style.css
+++ b/dev/styles/style.css
@@ -14,6 +14,13 @@ body {
 	margin: 0;
 	padding: 0;
 }
+/* Aca se le pone -50 para que la imagen empieze a la mitad y le sobre imagen a ambos lados para poder moverse, es absoluto para no molestar a los demas div , y es index -1 para estar en un plano inferior a la pagina como un background*/
+#fondoInteractivo {
+	position:absolute;
+left:-50%;
+top: 0px;
+z-index:-1;
+}
 
 /* EVENTOS */
 
@@ -48,12 +55,14 @@ body {
 }
 
 /*Intro*/
+/* Es absolute para no molestar al resto de la pagina y tiene index 1 para que sea lo unico y primero que se vea hasta desaparecer*/
 #intro {
 position:absolute;
 left:0px;
 top: 0px;
 z-index:1;
 }
+/* Aca la imagen esta a 50% en top y left para que aparezca centrado, asi tambien se le resta la mitad del tamaño del logo para que la referencia a ubicar en top y left sea el punto medio, se le pone display none para que se pueda utilizar el fadeIn*/
 #logo {
 	position:absolute;
 z-index:2;
@@ -183,12 +192,14 @@ display: none;
 	float: left;
 }
 
+
+/* MODIFICACION PROVISORIA:  se cambio el url de ambos periodos para que contraste con la imagen de ejemplo de fondo negro. Esto será hasta que quede el fondo definitivo  */
 #timeline-regla .periodo-odd {
-	background: url(../images/fondo-odd.png) repeat;
+	background: url(../images/evento.png) repeat;
 }
 
 #timeline-regla .periodo-even {
-	background: url(../images/fondo-even.png) repeat;	
+	background: url(../images/evento.png) repeat;	
 }
 
 #timeline-regla .periodo-titulo {
