--- a/dev/styles/style.css
+++ b/dev/styles/style.css
@@ -7,7 +7,7 @@
 /* GENERAL */
 
 body {
-	background: url(../images/background.jpg) repeat;
+	background: url(../images/background2.jpg) repeat;
 	font-family: "Lindsey";
 	max-width:100%;
 	max-height:100%;
@@ -81,12 +81,12 @@ display: none;
 
 #navegador input {
 	float: left;
-    font-size: 1.5em;
-    height: 45px;
-    margin: 0;
-    width: 140px;
+	font-size: 1.5em;
+	height: 45px;
+	margin: 0;
+	width: 140px;
 	text-align: center;
-	margin-top: 10px;
+	margin-top: 55px;
 	color: #70777d;
 }
 
@@ -100,8 +100,8 @@ display: none;
 }
 
 #filtros .filtro {
-	width: 65px;
-	height:65px;
+	width: 50px;
+	height:50px;
 }
 
 #filtros, #timeline-comandos, #navegador {
@@ -169,23 +169,23 @@ display: none;
 }
 
 #timeline-comandos .retroceder {
-	width:65px;
-	height:55px;
+	width:50px;
+	height:50px;
 }
 
 #timeline-comandos .avanzar {
-	width:65px;
-	height:55px;
+	width:50px;
+	height:50px;
 }
 
 #timeline-comandos .alejar {
-	width:65px;
-	height:55px;
+	width:50px;
+	height:50px;
 }
 
 #timeline-comandos .acercar {
-	width:65px;
-	height:55px;
+	width:50px;
+	height:50px;
 }
 
 /* TIME LINE */
@@ -194,7 +194,7 @@ display: none;
 	width: 100%;
 	float: left;
 	clear: both;
-	margin-top: 25px;
+	margin-top: 50px;
 	overflow: hidden;
 }
 
@@ -414,8 +414,8 @@ margin-right: 10px;
 }
 	
 #botonCargar .subir{
-	width:65px;
-	height:55px;
+	width:50px;
+	height:50px;
 	}
 
 /* ACCESIBILIDAD */
