Hago modificaciones del tooltip y el popup, me falta acomodar el popup bien issue #39

--- a/dev/styles/style.css
+++ b/dev/styles/style.css
@@ -242,29 +242,10 @@ display: none;
 	border-radius:5px;
 	font-size:11px;
 
-	color:#000;
+	color:#727376;
 	overflow:hidden;
-	
-
-	/* Color alternativo para versiones que no soporten degradados */
-	background-color:#f4f0ec;
-	/* Safari 4+ y Chrome 1+ */
-/*	background-image:-webkit-gradient(linear, left top, left bottom, color-stop(0, #fdee6d), color-stop(1, #fcfa9c));*/
-	/* Safari 5.1+ y Chrome 10+ */
-/*	background-image:-webkit-linear-gradient(#fdee6d, #fcfa9c);*/
-	/* Firefox 3.6+ */
-/*	background-image:-moz-linear-gradient(top, #fdee6d, #fcfa9c);*/
-	/* Opera 11.10+ */
-/*	background-image:-o-linear-gradient(top, #fdee6d, #fcfa9c);*/
-	/* Internet Explorer 5.5+ */
-/*	filter:progid:DXImageTransform.Microsoft.gradient(startColorStr='#fdee6d', EndColorStr='#fcfa9c');*/
+	background-color:#727376;
 }
- 
-/*#timeline-tooltip .tipDate {*/
-/*    color: #999999;*/
-/*    float: right;*/
-/*    font-style: italic;*/
-/*}*/
 
 #timeline-tooltip .tipHeader {
     clear: left;
@@ -274,7 +255,7 @@ display: none;
     font-style: italic;
     margin-bottom: 5px;
     width: 200px;
-    background-color:#cb842e;
+    background-color:#4B4B4D;
     color:#FFF;
     /* 38 caracteres de maximo para el titulo */
 }
@@ -298,71 +279,35 @@ margin: 0 auto;
     clear: both;
     float: left;
     font-size: 13px;
+    color: white;
     margin: 7px;
 }
 
 
 
 /* POPUP */
-/* 
-#timeline-popup {
-
-	width: 800px;
-	height: 600px;
-	text-align:center;
-	
-/*	
-	border-width:1px;
-	border-style:solid;
-	border-radius:10px;
-	font-size:14px;
-
-	color:#000;
-	border-color:#61380B;
-	*/
-	/* Color alternativo para versiones que no soporten degradados */
-/*	background-color:#000;*/
-	/* Safari 4+ y Chrome 1+ */
-/*	background-image:-webkit-gradient(linear, left top, left bottom, color-stop(0, #fdee6d), color-stop(1, #fcfa9c));*/
-	/* Safari 5.1+ y Chrome 10+ */
-/*	background-image:-webkit-linear-gradient(#fdee6d, #fcfa9c);*/
-	/* Firefox 3.6+ */
-/*	background-image:-moz-linear-gradient(top, #fdee6d, #fcfa9c); */
-	/* Opera 11.10+ */
-/*	background-image:-o-linear-gradient(top, #fdee6d, #fcfa9c); */
-	/* Internet Explorer 5.5+ */
-/*	filter:progid:DXImageTransform.Microsoft.gradient(startColorStr='#fdee6d', EndColorStr='#fcfa9c'); */
-/*}*/
  
 #timeline-popup {
     min-height: 350px !important;
     max-height: 530px !important;
     overflow: auto;
-    overflow-x: hidden;
-    /*Antes era height: 530 - sin min ni max*/
+    background-color:#727376;
 }
  
-#timeline-popup .tipDate {
-    color: #999999;
+#timeline-popup .popDate {
+    color: white;
     float: right;
     font-style: italic;
 }
 
-#timeline-popup .tipHeader {
+#timeline-popup .popHeader {
     clear: left;
-    float: left;
     font-weight:bold;
     font-size: 16px;
-    font-style: italic;
     margin-top: 5px;
     width: 200px;
+    background-color:#4B4B4D;
     /* 38 caracteres de maximo para el titulo */
-}
-
-#timeline-popup .tipImage {
-    float: left;
-    max-height: 200px;
-    max-width: 10px;
 }
 
 #timeline-popup .popImage {
@@ -376,16 +321,20 @@ float: left;
 margin-right: 10px;
 }
 
-#timeline-popup .tipBody {
-    clear: both;
-    float: left;
-    font-size: 13px;
-    margin-top: 5px;
-}
-
 #timeline-popup .popBody {
+    font-size: 16px;
+    margin-top: 5px;
+    color: white;
     text-align:justify;
 }
+
+#timeline-popup .popFooter {
+    font-size: 10px;
+    margin-top: 5px;
+    text-align:justify;
+    color: white;
+}
+
 /* Se trabaja con los componentes del popup para cargar eventos*/
 #cargarEventos{
 	overflow: auto;
