--- a/dev/styles/style.css
+++ b/dev/styles/style.css
@@ -1,18 +1,27 @@
 /* FONTS */
 @font-face {
-    font-family: "Lindsey";
-    src: url(../fonts/LINDS.TTF);
+    font-family: "AlteHaasGroteskBold";
+    src: url(../fonts/AlteHaasGroteskBold.TTF);
+}
+
+@font-face {
+    font-family: "BebasNeue";
+    src: url(../fonts/BebasNeue.TTF);
 }
 
 /* GENERAL */
 
 body {
 	background-color:#67686C;
-	font-family: "Lindsey";
+	font-family: "AlteHaasGroteskBold";
 	max-width:100%;
 	max-height:100%;
 	margin: 0;
 	padding: 0;
+}
+
+body .h2 .h3 {
+	font-family: "BebasNeue";
 }
 #encabezado {
 	width: auto;
@@ -187,22 +196,7 @@ display: none;
 	text-decoration: none;
 }
 
-#timeline-comandos .retroceder {
-	width:50px;
-	height:50px;
-}
-
-#timeline-comandos .avanzar {
-	width:50px;
-	height:50px;
-}
-
-#timeline-comandos .alejar {
-	width:50px;
-	height:50px;
-}
-
-#timeline-comandos .acercar {
+#timeline-comandos .retroceder, .avanzar, .alejar, .acercar {
 	width:50px;
 	height:50px;
 }
