--- a/dev/styles/style.css
+++ b/dev/styles/style.css
@@ -12,7 +12,7 @@
 /* GENERAL */
 
 body {
-	background-color:#67686C;
+    background: #f8f8f8;
 	font-family: "AlteHaasGroteskBold";
 	max-width:100%;
 	max-height:100%;
@@ -24,12 +24,22 @@ body .h2 .h3 {
 	font-family: "BebasNeue";
 }
 #encabezado {
-	width: auto;
-	height: 220px;
-	background: #3F3F41;
-	max-height: 220px;
-	top: 40px;
+    z-index: 200;
+    min-height: 80px;
+    border-bottom: 1px solid #eaeaea;
+    box-shadow: 0 3px 5px rgba(0,0,0,0.10);
+    background-color: #f8f8f8;
+    background: -webkit-gradient(linear, left top, left bottom, from(#f8f8f8), to(#f2f2f2));
+    background: -webkit-linear-gradient(top, #f8f8f8, #f2f2f2);
+    background: -moz-linear-gradient(top, #f8f8f8, #f2f2f2);
+    background: -ms-linear-gradient(top, #f8f8f8, #f2f2f2);
+    background: -o-linear-gradient(top, #f8f8f8, #f2f2f2);
+    background: linear-gradient(top, #f8f8f8, #f2f2f2);
 
+}
+.brand {
+    float: left;
+    min-height: 80px;
 }
 /* EVENTOS */
 
@@ -85,30 +95,30 @@ display: none;
 /* NAVEGADOR */
 
 #navegador {
-	position: absolute;
-	float: left;
-	width: 30%;
-	top: 60px;
-	left: 225px;
-
+    float: right;
 }
 
 #navegador .buscar{
-	width: 65px;
-	height: 55px;
-	float: left;
-	margin-left: 5px;
+    width: 32px;
+    float: left;
+    display: block;
+    margin-top: 15px;
+    margin-left: -39px;
 }
 
 #navegador input {
-	float: left;
-	font-size: 1.5em;
-	height: 45px;
-	width: 175px;
-	text-align: center;
-	margin-top: 7px;
-	color: #70777d;
-	margin-left: 15px;
+    float: left;
+    font-size: 1.5em;
+    height: 45px;
+    width: 205px;
+    text-align: center;
+    margin-top: 7px;
+    color: #70777d;
+    margin-left: 15px;
+    background: white;
+    border: 1px solid #eaeaea;
+    border-radius: 5px;
+    padding-right: 45px;
 }
 
 /* FILTROS */
@@ -121,12 +131,10 @@ display: none;
 }
 
 #filtros .filtro {
-	width: 50px;
-	height: 50px;
-	float: right;
-	top: 80px;
-	position: absolute;
-	left: 94%;
+    width: 50px;
+    height: 50px;
+    float: right;
+    margin-right: 20px;
 }
 
 #filtros, #timeline-comandos, #navegador {
@@ -138,12 +146,15 @@ display: none;
 }
 
 #filtros-panel {
-	background: url("../images/fondo-filtros.png") repeat scroll 0 0 transparent;
     border: 2px solid #EEEEEE;
     margin: 85px 0 0 10%;
     padding: 1%;
     width: 78%;
 	clear: both;
+    background: white;
+    border-top: 1px solid #eaeaea;
+    border-bottom: 1px solid #eaeaea;
+    border-radius: 5px;
 }
 
 #filtros-panel h2 {
@@ -183,12 +194,8 @@ display: none;
 /* COMANDOS */
 
 #timeline-comandos {
-	width: 30%;
-	text-align: center;
-	float: left;
-	top: 65px;
-	position: absolute;
-	left: 35%;
+    width: 100%;
+    text-align: center;
 }
 
 #timeline-comandos a {
@@ -207,8 +214,11 @@ display: none;
 	width: 100%;
 	float: left;
 	clear: both;
-	margin-top: 50px;
+    margin-top: 30px;
 	overflow: hidden;
+    background: white;
+    border-top: 1px solid #eaeaea;
+    border-bottom: 1px solid #eaeaea;
 }
 
 #timeline-regla {
@@ -225,23 +235,26 @@ display: none;
 
 
 #timeline-regla .periodo-odd {
-	background: url(../images/fondo-odd.png) repeat;
 }
 
 #timeline-regla .periodo-even {
-	background: url(../images/fondo-even.png) repeat;		
+    background-color: #f5f5f5;
 }
 
 #timeline-regla .periodo-titulo {
-	opacity: 1;
-	color: #000;
-	font-size: 12px;
-	font-weight: bold;
-	letter-spacing: 3px;
-	margin-top: 10px;
-	text-align: center;
-	vertical-align: middle;
-	width: 100%;
+    opacity: 1;
+    height: 45px;
+    color: #000;
+    font-size: 12px;
+    font-weight: bold;
+    letter-spacing: 3px;
+    padding-top: 10px;
+    text-align: center;
+    vertical-align: middle;
+    width: 100%;
+    background: -webkit-linear-gradient(top,#f5f5f5 0,#fefefe 100%);
+    border-bottom: 1px solid #f5f5f5;
+    box-shadow: 0 3px 5px rgba(0,0,0,0.05) inset;
 }
 
 /* TOOLTIPS */
@@ -250,27 +263,53 @@ display: none;
 	position:absolute;
 	z-index:9999;
 	width:200px;
-	text-align:center;
+    text-align: left;
 	height: auto;
 	border-radius:5px;
 	font-size:11px;
 
 	color:#727376;
 	overflow:hidden;
-	background-color:#727376;
+    padding: 15px;
+    padding-top: 5px;
+    display: block;
+    border: 1px solid #c5c5c5;
+    box-shadow: 0 3px 5px rgba(0,0,0,0.10);
+    border-radius: 6px;
+    background: #fdfdfd;
+    background: -moz-linear-gradient(top,#fdfdfd 0,#f5f5f5 100%);
+    background: -webkit-gradient(linear,left top,left bottom,color-stop(0%,#fdfdfd),color-stop(100%,#f5f5f5));
+    background: -webkit-linear-gradient(top,#fdfdfd 0,#f5f5f5 100%);
+    background: -o-linear-gradient(top,#fdfdfd 0,#f5f5f5 100%);
+    background: -ms-linear-gradient(top,#fdfdfd 0,#f5f5f5 100%);
+    background: linear-gradient(top,#fdfdfd 0,#f5f5f5 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fdfdfd',endColorstr='#f5f5f5',GradientType=0);
+}
+
+.timeline-popup-box{
+
+    padding: 15px;
+    display: block;
+    border: 1px solid #c5c5c5;
+    box-shadow: 0 3px 5px rgba(0,0,0,0.10);
+    border-radius: 6px;
+    background: #fdfdfd;
+    background: -moz-linear-gradient(top,#fdfdfd 0,#f5f5f5 100%);
+    background: -webkit-gradient(linear,left top,left bottom,color-stop(0%,#fdfdfd),color-stop(100%,#f5f5f5));
+    background: -webkit-linear-gradient(top,#fdfdfd 0,#f5f5f5 100%);
+    background: -o-linear-gradient(top,#fdfdfd 0,#f5f5f5 100%);
+    background: -ms-linear-gradient(top,#fdfdfd 0,#f5f5f5 100%);
+    background: linear-gradient(top,#fdfdfd 0,#f5f5f5 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fdfdfd',endColorstr='#f5f5f5',GradientType=0);
+
 }
 
 #timeline-tooltip .tipHeader {
-    clear: left;
-    float: left;
-    font-weight:bold;
-    font-size: 16px;
-    font-style: italic;
+    font-weight: bold;
+    font-size: 13px;
     margin-bottom: 5px;
-    width: 200px;
-    background-color:#4B4B4D;
-    color:#FFF;
-    /* 38 caracteres de maximo para el titulo */
+    color: #333;
+    text-align: left;
 }
 
 
@@ -286,14 +325,34 @@ overflow:hidden;
 #timeline-tooltip .tipImage img {
 max-width:100%;
 margin: 0 auto;
+border: 1px solid #c5c5c5;
+box-shadow: 0 3px 5px rgba(0,0,0,0.10);
+border-radius: 6px;
+margin-top: 5px;
 }
 
 #timeline-tooltip .tipBody {
     clear: both;
     float: left;
     font-size: 13px;
-    color: white;
+    color: #333;
     margin: 7px;
+}
+
+.badge {
+    display: inline-block;
+    min-width: 10px;
+    padding: 3px 7px;
+    font-size: 12px;
+    font-weight: 700;
+    color: #fff;
+    line-height: 1;
+    vertical-align: baseline;
+    white-space: nowrap;
+    text-align: center;
+    background-color: #999;
+    border-radius: 10px;
+    margin-right: 5px;
 }
 
 
@@ -304,8 +363,8 @@ margin: 0 auto;
     min-height: 350px !important;
     max-height: 530px !important;
     overflow: auto;
-    background-color:#727376;
     font-family: "AlteHaasGroteskBold";
+
 }
  
 #timeline-popup .popDate {
@@ -333,13 +392,17 @@ height: auto;
 width: 100%;
 float: left;
 margin-right: 10px;
+border: 1px solid #c5c5c5;
+box-shadow: 0 3px 5px rgba(0,0,0,0.10);
+border-radius: 6px;
+margin-top: 5px;
 }
 
 #timeline-popup .popBody {
-    font-size: 16px;
+    font-size: 13px;
     margin-top: 5px;
-    color: white;
-    text-align:justify;
+    color: #333;
+    text-align: justify;
 }
 
 #timeline-popup .popFooter {
